# Courtwork

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts
.github/workflows/: pages.yml
apps/desktop/: ACCEPTANCE.md  AUDIT-HANDOFF.md  SPEC.md  icon-audit.html  index.html  package.json  playwright.config.ts  svgo.config.mjs  tsconfig.node.json  visual-gallery.html  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: main.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: host_auth.rs  lib.rs  main.rs  material_store.rs  work_state.rs
archive/: README.md  harness-core-1-stage-c.md
archive/design-prototype-2026-07-19-r2/: README.md  consolidation-survey.md  prototype-audit.md  work-agent-prototype-r2.html
archive/docs-legacy-2026-07-13/: MANIFEST.md
archive/research-2026-07-14/: INTAKE-RAW.md  README.md  deepseek-usage-billing.md  durable-work-state.md  host-file-authorization.md  legal-scan-corpus.md  package-machine-gates.md  wps-compat.md
archive/research-2026-07-15-round-2/: ACCEPTANCE.md  README.md  claimed-vs-real.md  material-chain-and-sources.md  multi-host-decoupling.md  multiwriter-and-cross-case.md  output-docx-reality.md  trigger-and-gate-capacity.md
archive/research-2026-07-15-round-3/: README.md  anysearch-retrieval-tier.md  award-craft-harvest.md  chat-as-dossier-thesis.md  chinese-display-font.md  coding-agent-strategies-subtraction.md  cognitive-debt-mapping.md  (+26 more)
docs/: 00-部署意见稿-法律垂类模型与产品形态.md  03-MVP规划.md  04-长期Roadmap.md  05-调研报告-开源选型.md  06-调研报告-DeepResearch范式与长任务机制.md  07-调研报告-md到docx管线与中文字体.md  08-调研报告-文档编辑面与转译范式.md  09-调研报告-防呆交互与自动化偏见防护.md  10-实施切分-层与工单.md  11-会话唤醒prompt.md  12-调研报告-长任务Agent架构盘点.md  16-调研报告-企业私域库接入.md  17-调研报告-office与邮件生态嵌入.md  18-调研报告-provider接口与兼容策略.md  19-调研报告-交互反馈动效.md  21-架构决定-演示数据包与样板案.md  22-架构观察-范式泛化边界.md  23-架构决定-编辑面与单向编译.md  24-架构决定-场景注册表定位与skill兼容.md  25-架构决定-三层记忆与偏好.md  27-架构决定-sandbox与fetch分期.md  29-架构决定-企业私域库接入.md  30-W9设计brief与handoff规范.md  31-设计语言调研分发计划.md  36-schema空间设计分册.md  40-场景设计-S5合同对比.md  41-MVP缺口盘点与路由声明.md  44-调研报告-组件与图标库.md  46-控件全量清单.md  47-架构决定-文件操作分级.md  48-场景族预言-办公管理.md  49-架构决定-通用底座与垂类路由.md  51-push前安全清扫报告.md  52-UX微调批次一.md  53-架构决定-schema握手协议.md  54-career-kit-唤醒prompt.md  54-收束与对外材料计划.md  55-Debug工单册.md  56-调研-法律计算器族.md  57-调研-schema渲染形态全谱.md  (+14 more)
eval/: ACCEPTANCE.md  SPEC.md  package.json  tsconfig.json
release/: ACCEPTANCE.md  CANDIDATE_v0.1.2.md  Courtwork_0.1.1_aarch64.dmg.sha256  Courtwork_0.1.2_aarch64.dmg.sha256  DEPLOYMENT.md  DEPLOYMENT_v0.1.1.md  README.md  RELEASE_NOTES_v0.1.1.md  RELEASE_NOTES_v0.1.2.md  SPEC.md
site/: ACCEPTANCE.md  SPEC.md  index.html  main.js  og.html  styles.css
(+722 files in other folders)
