[package]
name = "courtwork-desktop"
version = "0.1.1"
description = "Courtwork 法律工作台"
authors = ["Courtwork"]
edition = "2021"

[lib]
name = "courtwork_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = "4.1.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["std", "NSButton", "NSControl", "NSResponder", "NSView", "NSWindow"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["std", "NSGeometry"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
